--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
   <h1>These are JS assignments, yeah!</h1>
-  <script src="JSFondamentals.js"></script>
-  <!-- <script src="./codingChallenge/#1.js"></script> -->
+  <script src="JSFondamentalsPartOne.js"></script>
 </body>
 
 </html>
