--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <h1>These are JS assignments, yeah!</h1>
-  <script src="JSFondamentalsPartOne.js"></script>
+  <!-- <script src="JSFondamentalsPartOne.js"></script> -->
+  <script src="JSFondamentalsPartOTwo.js"></script>
 </body>
 
 </html>
