--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-
-<body>
-  <h1>These are JS assignments, yeah!</h1>
-  <!-- <script src="JSFondamentalsPartOne.js"></script> -->
-  <script src="JSFondamentalsPartOTwo.js"></script>
-</body>
-
+  <body>
+    <h1>These are JS assignments, yeah!!!!!</h1>
+    <!-- <script src="JSFondamentalsPartOne.js"></script> -->
+    <script src="JSFondamentalsPartOTwo.js"></script>
+  </body>
 </html>
